# AI-Press-Review-5

./: .gitignore  preview-how-it-works.html  preview-site.html  requirements.txt
.github/workflows/: approve-release.yml  auto-release.yml  ci.yml  cloud-dry-run.yml  daily-generate.yml  reject-episode.yml  release.yml  weekly-generate.yml  youtube-upload.yml
config/: podcast.yaml  prompt_system.txt  prompt_system_fr.txt  prompt_weekly.txt  prompt_weekly_fr.txt
data/sources/: 2026-04-13.json  latest.md
data/state/: episode_history.json  episode_history_en.json  episode_history_fr.json  pending_draft.json  pending_draft_en.json  pending_draft_fr.json  used_sources.json  used_sources_en.json  used_sources_fr.json
docs/: 404.html  TODO-tts-chunk-seams.md  about.html  how-it-works.html  index.html  podcast-feed.xml  sitemap.xml  social-feed.xml
paperless-setup/: .env.example  .gitignore  README.md  docker-compose.yml  install.sh
paperless-setup/organizer/: config.example.yaml  pyproject.toml  requirements.txt
paperless-setup/organizer/mac_organizer/: __init__.py  classifier.py  cli.py  config.py  db.py  deduplicator.py  extractor.py  hasher.py  organizer.py  prompts.py  scanner.py  taxonomy.py
paperless-setup/organizer/tests/: test_classifier.py  test_deduplicator.py  test_taxonomy.py
scripts/: bench_llm.py  cloud_dry_run.py  generate_draft.py  reject_draft.py  release.py  release_draft.py  youtube_auth_setup.py  youtube_upload.py
tests/: test_clustering.py  test_generator.py  test_grounding.py  test_passes.py  test_tts.py  test_validate.py
(+47 files in other folders)
